# DesktopInfoBackgroundForMoksha

./: README.md
LinuxBackgroundInfoScreen/: CMakeLists.txt  DesktopbackgroundInfoScreen  main.cpp  setWallpaper
